include/hs_uv.h

void hs_uv_fs_readlink_extra_cleanup(char** path);
void hs_uv_fs_readlink_cleanup(char* path);
HsInt hs_uv_fs_copyfile(const char* path, const char* path2, int flag);
HsInt hs_uv_fs_access(const char* path, int mode);
HsInt hs_uv_fs_chmod(const char* path, int mode);
HsInt hs_uv_fs_fchmod(int32_t file, int mode);
HsInt hs_uv_fs_utime(const char* path, double atime, double mtime);
HsInt hs_uv_fs_futime(int32_t file, double atime, double mtime);
HsInt hs_uv_fs_lutime(const char* path, double atime, double mtime);
HsInt hs_uv_fs_link(const char* path, const char* path2);
HsInt hs_uv_fs_symlink(const char* path, const char* path2, int flag);
HsInt hs_uv_fs_readlink(const char* path, char** result_path);
HsInt hs_uv_fs_realpath(const char* path, char** result_path);
HsInt hs_uv_fs_stat_threaded(const char* path, uv_stat_t* stat, uv_loop_t* loop);
HsInt hs_uv_fs_fstat_threaded(int32_t file, uv_stat_t* stat, uv_loop_t* loop);
HsInt hs_uv_fs_lstat_threaded(const char* path, uv_stat_t* stat, uv_loop_t* loop);
HsInt hs_uv_fs_rename_threaded(const char* path, const char* path2, uv_loop_t* loop);
HsInt hs_uv_fs_fsync_threaded(int32_t file, uv_loop_t* loop);
HsInt hs_uv_fs_fdatasync_threaded(int32_t file, uv_loop_t* loop);
HsInt hs_uv_fs_ftruncate_threaded(int32_t file, int64_t off, uv_loop_t* loop);
HsInt hs_uv_fs_copyfile_threaded(const char* path, const char* path2, int flag, uv_loop_t* loop);
HsInt hs_uv_fs_access_threaded(const char* path, int mode, uv_loop_t* loop);
HsInt hs_uv_fs_chmod_threaded(const char* path, int mode, uv_loop_t* loop);
HsInt hs_uv_fs_fchmod_threaded(int32_t file, int mode, uv_loop_t* loop);
HsInt hs_uv_fs_utime_threaded(const char* path, double atime, double mtime, uv_loop_t* loop);
HsInt hs_uv_fs_futime_threaded(int32_t file, double atime, double mtime, uv_loop_t* loop);
HsInt hs_uv_fs_lutime_threaded(const char* path, double atime, double mtime, uv_loop_t* loop);
HsInt hs_uv_fs_link_threaded(const char* path, const char* path2, uv_loop_t* loop);
HsInt hs_uv_fs_symlink_threaded(const char* path, const char* path2, int flag, uv_loop_t* loop);
HsInt hs_uv_fs_readlink_threaded(const char* path, char** result_path, uv_loop_t* loop);
HsInt hs_uv_fs_realpath_threaded(const char* path, char** result_path, uv_loop_t* loop);