Z/IO/UV/FFI.hsc


foreign import ccall unsafe hs_uv_fs_stat_threaded
    :: CString -> Ptr FStat -> Ptr UVLoop -> IO UVSlotUnsafe
foreign import ccall unsafe hs_uv_fs_fstat_threaded
    :: UVFD -> Ptr FStat -> Ptr UVLoop -> IO UVSlotUnsafe
foreign import ccall unsafe hs_uv_fs_lstat_threaded
    :: CString -> Ptr FStat -> Ptr UVLoop -> IO UVSlotUnsafe
foreign import ccall unsafe hs_uv_fs_rename_threaded
    :: CString -> CString -> Ptr UVLoop -> IO UVSlotUnsafe
foreign import ccall unsafe hs_uv_fs_fsync_threaded
    :: UVFD -> Ptr UVLoop -> IO UVSlotUnsafe
foreign import ccall unsafe hs_uv_fs_fdatasync_threaded
    :: UVFD -> Ptr UVLoop -> IO UVSlotUnsafe
foreign import ccall unsafe hs_uv_fs_ftruncate_threaded 
    :: UVFD -> Int64 -> Ptr UVLoop -> IO UVSlotUnsafe

-- | Flags control copying.
-- 
--   * 'COPYFILE_EXCL': If present, uv_fs_copyfile() will fail with UV_EEXIST if the destination path already exists. The default behavior is to overwrite the destination if it exists.
--   * 'COPYFILE_FICLONE': If present, uv_fs_copyfile() will attempt to create a copy-on-write reflink. If the underlying platform does not support copy-on-write, then a fallback copy mechanism is used.
-- 
newtype CopyFileFlag = CopyFileFlag CInt
    deriving (Eq, Ord, Show, FiniteBits, Bits, Storable, Num)

pattern COPYFILE_DEFAULT :: CopyFileFlag
pattern COPYFILE_DEFAULT = CopyFileFlag 0

pattern COPYFILE_EXCL :: CopyFileFlag
pattern COPYFILE_EXCL = CopyFileFlag #{const UV_FS_COPYFILE_EXCL}

pattern COPYFILE_FICLONE :: CopyFileFlag
#ifdef UV_FS_COPYFILE_FICLONE
pattern COPYFILE_FICLONE = CopyFileFlag #{const UV_FS_COPYFILE_FICLONE}
#else
pattern COPYFILE_FICLONE = CopyFileFlag 0   -- fallback to normal copy.
#endif

foreign import ccall unsafe hs_uv_fs_copyfile :: CString -> CString -> CopyFileFlag -> IO Int
foreign import ccall unsafe hs_uv_fs_copyfile_threaded
    :: CString -> CString -> CopyFileFlag -> Ptr UVLoop -> IO UVSlotUnsafe

newtype AccessMode = AccessMode CInt
    deriving (Eq, Ord, Show, FiniteBits, Bits, Storable, Num)

pattern F_OK :: AccessMode
pattern F_OK = AccessMode #{const F_OK}
pattern R_OK :: AccessMode
pattern R_OK = AccessMode #{const R_OK}
pattern W_OK :: AccessMode
pattern W_OK = AccessMode #{const W_OK}
pattern X_OK :: AccessMode
pattern X_OK = AccessMode #{const X_OK}

data AccessResult = NoExistence | NoPermission | AccessOK deriving (Show, Eq, Ord)

foreign import ccall unsafe hs_uv_fs_access :: CString -> AccessMode -> IO Int
foreign import ccall unsafe hs_uv_fs_access_threaded
    :: CString -> AccessMode -> Ptr UVLoop -> IO UVSlotUnsafe

foreign import ccall unsafe hs_uv_fs_chmod :: CString -> FileMode -> IO Int
foreign import ccall unsafe hs_uv_fs_chmod_threaded
    :: CString -> FileMode -> Ptr UVLoop -> IO UVSlotUnsafe

foreign import ccall unsafe hs_uv_fs_fchmod :: UVFD -> FileMode -> IO Int
foreign import ccall unsafe hs_uv_fs_fchmod_threaded
    :: UVFD -> FileMode -> Ptr UVLoop -> IO UVSlotUnsafe

foreign import ccall unsafe hs_uv_fs_utime :: CString -> Double -> Double -> IO Int
foreign import ccall unsafe hs_uv_fs_utime_threaded
    :: CString -> Double -> Double -> Ptr UVLoop -> IO UVSlotUnsafe

foreign import ccall unsafe hs_uv_fs_futime :: UVFD -> Double -> Double -> IO Int
foreign import ccall unsafe hs_uv_fs_futime_threaded
    :: UVFD -> Double -> Double -> Ptr UVLoop -> IO UVSlotUnsafe

foreign import ccall unsafe hs_uv_fs_lutime :: CString -> Double -> Double -> IO Int
foreign import ccall unsafe hs_uv_fs_lutime_threaded
    :: CString -> Double -> Double -> Ptr UVLoop -> IO UVSlotUnsafe

newtype SymlinkFlag = SymlinkFlag CInt
    deriving (Eq, Ord, Show, FiniteBits, Bits, Storable, Num)

pattern SYMLINK_DEFAULT :: SymlinkFlag
pattern SYMLINK_DEFAULT = SymlinkFlag 0

pattern SYMLINK_DIR :: SymlinkFlag
pattern SYMLINK_DIR = SymlinkFlag #{const UV_FS_SYMLINK_DIR}

pattern SYMLINK_JUNCTION :: SymlinkFlag
pattern SYMLINK_JUNCTION = SymlinkFlag #{const UV_FS_SYMLINK_JUNCTION}

foreign import ccall unsafe hs_uv_fs_link :: CString -> CString -> IO Int
foreign import ccall unsafe hs_uv_fs_link_threaded
    :: CString -> CString -> Ptr UVLoop -> IO UVSlotUnsafe

foreign import ccall unsafe hs_uv_fs_symlink :: CString -> CString -> SymlinkFlag -> IO Int
foreign import ccall unsafe hs_uv_fs_symlink_threaded
    :: CString -> CString -> SymlinkFlag -> Ptr UVLoop -> IO UVSlotUnsafe

-- readlink and realpath share the same cleanup and callback
foreign import ccall unsafe hs_uv_fs_readlink_cleanup
    :: CString -> IO ()
foreign import ccall unsafe hs_uv_fs_readlink
    :: CString -> MBA## CString -> IO Int
foreign import ccall unsafe hs_uv_fs_realpath
    :: CString -> MBA## CString -> IO Int
foreign import ccall unsafe hs_uv_fs_readlink_extra_cleanup 
    :: Ptr CString -> IO ()
foreign import ccall unsafe hs_uv_fs_readlink_threaded
    :: CString -> Ptr CString -> Ptr UVLoop -> IO UVSlotUnsafe
foreign import ccall unsafe hs_uv_fs_realpath_threaded
    :: CString -> Ptr CString -> Ptr UVLoop -> IO UVSlotUnsafe

--------------------------------------------------------------------------------
-- misc

newtype UVHandleType = UVHandleType CInt deriving (Eq, Ord, Show, Storable)

pattern UV_UNKNOWN_HANDLE :: UVHandleType
pattern UV_UNKNOWN_HANDLE = UVHandleType #{const UV_UNKNOWN_HANDLE}
pattern UV_ASYNC :: UVHandleType
pattern UV_ASYNC = UVHandleType #{const UV_ASYNC}
pattern UV_CHECK :: UVHandleType
pattern UV_CHECK = UVHandleType #{const UV_CHECK}
pattern UV_FS_EVENT :: UVHandleType
pattern UV_FS_EVENT = UVHandleType #{const UV_FS_EVENT}
pattern UV_FS_POLL :: UVHandleType
pattern UV_FS_POLL = UVHandleType #{const UV_FS_POLL}
pattern UV_HANDLE :: UVHandleType
pattern UV_HANDLE = UVHandleType #{const UV_HANDLE}
pattern UV_IDLE :: UVHandleType
pattern UV_IDLE = UVHandleType #{const UV_IDLE}
pattern UV_NAMED_PIPE :: UVHandleType
pattern UV_NAMED_PIPE = UVHandleType #{const UV_NAMED_PIPE}
pattern UV_POLL :: UVHandleType
pattern UV_POLL = UVHandleType #{const UV_POLL}
pattern UV_PREPARE :: UVHandleType
pattern UV_PREPARE = UVHandleType #{const UV_PREPARE}
pattern UV_PROCESS :: UVHandleType
pattern UV_PROCESS = UVHandleType #{const UV_PROCESS}
pattern UV_STREAM :: UVHandleType
pattern UV_STREAM = UVHandleType #{const UV_STREAM}
pattern UV_TCP :: UVHandleType
pattern UV_TCP = UVHandleType #{const UV_TCP}
pattern UV_TIMER :: UVHandleType
pattern UV_TIMER = UVHandleType #{const UV_TIMER}
pattern UV_TTY :: UVHandleType
pattern UV_TTY = UVHandleType #{const UV_TTY}
pattern UV_UDP :: UVHandleType
pattern UV_UDP = UVHandleType #{const UV_UDP}
pattern UV_SIGNAL :: UVHandleType
pattern UV_SIGNAL = UVHandleType #{const UV_SIGNAL}
pattern UV_FILE :: UVHandleType
pattern UV_FILE = UVHandleType #{const UV_FILE}

foreign import ccall unsafe uv_guess_handle :: UVFD -> IO UVHandleType

foreign import ccall unsafe uv_resident_set_memory :: MBA## CSize -> IO CInt
foreign import ccall unsafe uv_uptime :: MBA## Double -> IO CInt
foreign import ccall unsafe uv_getrusage :: MBA## a -> IO CInt

-- | Data type for storing times.
-- typedef struct { long tv_sec; long tv_usec; } uv_timeval_t;
data TimeVal = TimeVal 
    { tv_sec  :: {-# UNPACK #-} !CLong
    , tv_usec :: {-# UNPACK #-} !CLong
    } deriving (Show, Read, Eq, Ord)

-- | Data type for resource usage results.
--
-- Members marked with (X) are unsupported on Windows. 
-- See <https://man7.org/linux/man-pages/man2/getrusage.2.html getrusage(2)> for supported fields on Unix
data ResUsage = ResUsage
    { ru_utime    :: {-# UNPACK #-} !TimeVal   -- ^  user CPU time used, in microseconds
    , ru_stime    :: {-# UNPACK #-} !TimeVal   -- ^  system CPU time used, in microseconds
    , ru_maxrss   :: {-# UNPACK #-} !Word64    -- ^  maximum resident set size
    , ru_ixrss    :: {-# UNPACK #-} !Word64    -- ^  integral shared memory size (X)
    , ru_idrss    :: {-# UNPACK #-} !Word64    -- ^  integral unshared data size (X)
    , ru_isrss    :: {-# UNPACK #-} !Word64    -- ^  integral unshared stack size (X)
    , ru_minflt   :: {-# UNPACK #-} !Word64    -- ^  page reclaims (soft page faults) (X)
    , ru_majflt   :: {-# UNPACK #-} !Word64    -- ^  page faults (hard page faults)
    , ru_nswap    :: {-# UNPACK #-} !Word64    -- ^  swaps (X)
    , ru_inblock  :: {-# UNPACK #-} !Word64    -- ^  block input operations
    , ru_oublock  :: {-# UNPACK #-} !Word64    -- ^  block output operations
    , ru_msgsnd   :: {-# UNPACK #-} !Word64    -- ^  IPC messages sent (X)
    , ru_msgrcv   :: {-# UNPACK #-} !Word64    -- ^  IPC messages received (X)
    , ru_nsignals :: {-# UNPACK #-} !Word64    -- ^  signals received (X)
    , ru_nvcsw    :: {-# UNPACK #-} !Word64    -- ^  voluntary context switches (X)
    , ru_nivcsw   :: {-# UNPACK #-} !Word64    -- ^  involuntary context switches (X)
    } deriving (Show, Read, Eq, Ord)

sizeOfResUsage :: Int
sizeOfResUsage = #size uv_rusage_t

peekResUsage :: MBA## a -> IO ResUsage
peekResUsage mba = do
    utime_sec :: CLong <- peekMBA mba (#offset  uv_rusage_t, ru_utime )
    utime_usec :: CLong <- peekMBA mba ((#offset  uv_rusage_t, ru_utime) + sizeOf (undefined :: CLong))
    stime_sec :: CLong <- peekMBA mba (#offset  uv_rusage_t, ru_stime )
    stime_usec :: CLong <- peekMBA mba ((#offset  uv_rusage_t, ru_stime) + sizeOf (undefined :: CLong))
    maxrss   <- peekMBA mba (#offset  uv_rusage_t, ru_maxrss  )
    ixrss    <- peekMBA mba (#offset  uv_rusage_t, ru_ixrss   )
    idrss    <- peekMBA mba (#offset  uv_rusage_t, ru_idrss   )
    isrss    <- peekMBA mba (#offset  uv_rusage_t, ru_isrss   )
    minflt   <- peekMBA mba (#offset  uv_rusage_t, ru_minflt  )
    majflt   <- peekMBA mba (#offset  uv_rusage_t, ru_majflt  )
    nswap    <- peekMBA mba (#offset  uv_rusage_t, ru_nswap   )
    inblock  <- peekMBA mba (#offset  uv_rusage_t, ru_inblock )
    oublock  <- peekMBA mba (#offset  uv_rusage_t, ru_oublock )
    msgsnd   <- peekMBA mba (#offset  uv_rusage_t, ru_msgsnd  )
    msgrcv   <- peekMBA mba (#offset  uv_rusage_t, ru_msgrcv  )
    nsignals <- peekMBA mba (#offset  uv_rusage_t, ru_nsignals)
    nvcsw    <- peekMBA mba (#offset  uv_rusage_t, ru_nvcsw   )
    nivcsw   <- peekMBA mba (#offset  uv_rusage_t, ru_nivcsw  )
    return (ResUsage (TimeVal utime_sec utime_usec) (TimeVal stime_sec stime_usec)
                    maxrss ixrss idrss isrss minflt majflt nswap inblock
                    oublock msgsnd msgrcv nsignals nvcsw nivcsw)

foreign import ccall unsafe uv_os_getpid :: IO PID
foreign import ccall unsafe uv_os_getppid :: IO PID
foreign import ccall unsafe uv_os_getpriority :: PID -> MBA## CInt -> IO CInt
foreign import ccall unsafe uv_os_setpriority :: PID -> CInt -> IO CInt

newtype PID = PID CInt deriving (Eq, Ord, Show, Storable)

pattern PRIORITY_LOW          :: CInt
pattern PRIORITY_BELOW_NORMAL :: CInt
pattern PRIORITY_NORMAL       :: CInt
pattern PRIORITY_ABOVE_NORMAL :: CInt
pattern PRIORITY_HIGH         :: CInt
pattern PRIORITY_HIGHEST      :: CInt
pattern PRIORITY_LOW           = (#const UV_PRIORITY_LOW           )
pattern PRIORITY_BELOW_NORMAL  = (#const UV_PRIORITY_BELOW_NORMAL  )
pattern PRIORITY_NORMAL        = (#const UV_PRIORITY_NORMAL        )
pattern PRIORITY_ABOVE_NORMAL  = (#const UV_PRIORITY_ABOVE_NORMAL  )
pattern PRIORITY_HIGH          = (#const UV_PRIORITY_HIGH          )
pattern PRIORITY_HIGHEST       = (#const UV_PRIORITY_HIGHEST       )

foreign import ccall unsafe uv_hrtime :: IO Word64

foreign import ccall unsafe uv_os_environ :: MBA## (Ptr a) -> MBA## CInt -> IO CInt
foreign import ccall unsafe uv_os_free_environ :: Ptr a -> CInt -> IO ()
foreign import ccall unsafe uv_os_getenv :: CString -> CString -> MBA## CSize -> IO CInt
foreign import ccall unsafe uv_os_setenv :: CString -> CString -> IO CInt
foreign import ccall unsafe uv_os_unsetenv :: CString -> IO CInt

pattern UV_MAXHOSTNAMESIZE :: CSize
pattern UV_MAXHOSTNAMESIZE = #const UV_MAXHOSTNAMESIZE
foreign import ccall unsafe uv_os_gethostname :: CString -> MBA## CSize -> IO CInt
